--- a/src/public/assets/sass/styles.scss
+++ b/src/public/assets/sass/styles.scss
@@ -12,6 +12,14 @@ html, body {
   font-family: Lato,Helvetica,Arial,sans-serif;
 }
 
+.avatar-img{
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+}
+.art{
+  min-height: 400px !important;
+}
 .clear{
   clear: both;
 }
@@ -57,5 +65,14 @@ nav{
       max-width: 700px;
       margin: 0 auto;
     }
+  }
+}
+
+.mySelect {
+  height: 50px;
+  margin-top: 20px;
+  select {
+    display: block;
+
   }
 }
