chore(feedback-implemetation): implement feedback - switch to Jest for testing - add more tests - fix unordered article display - add confirmation to delete modal - add licence to readme file [Finishes #8]

--- a/src/public/assets/sass/styles.scss
+++ b/src/public/assets/sass/styles.scss
@@ -43,7 +43,14 @@ html, body {
   text-align: center;
 }
 .art{
-  min-height: 400px !important;
+  height: 420px !important;
+}
+.card-content {
+  height: 150px !important;
+}
+.my-image {
+  width: 100% !important;
+  height: 230px !important;
 }
 .clear{
   clear: both;
